--- a/web_app/package.json
+++ b/web_app/package.json
@@ -38,6 +38,9 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "fuse.js": "^7.0.0",
+    "i18next": "^23.11.5",
+    "i18next-browser-languagedetector": "^8.0.0",
+    "i18next-http-backend": "^2.5.2",
     "immer": "^10.0.3",
     "inter-ui": "^4.0.0",
     "lodash": "^4.17.21",
@@ -48,6 +51,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
     "react-hotkeys-hook": "^4.4.1",
+    "react-i18next": "^14.1.2",
     "react-photo-album": "^2.3.0",
     "react-router-dom": "^6.23.1",
     "react-use": "^17.4.0",
@@ -68,6 +72,7 @@
     "@types/node": "^20.9.2",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
+    "@types/react-i18next": "^8.1.0",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
     "@typescript-eslint/parser": "^6.10.0",
     "@vitejs/plugin-react": "^4.2.0",
